# test-web-serv

./: Dockerfile  LICENSE  __init__.py  app.py  docker-compose.yaml  pyproject.toml  run_app.py  test-web-serv - Ярлык.lnk
flask_docker/: __init__.py  app.py  game_logic.py
