[tool.poetry]
name = "flask-docker"
version = "0.1.0"
description = ""
authors = ["Denis"]
license = "MIT"
readme = "README.md"
packages = [{include = "flask_docker"}]

[tool.poetry.dependencies]
python = "^3.11"
Flask = "^2.2.2"
waitress = "^2.1.2"
cryptography = "^39.0.0"
flask-socketio = "^5.3.3"
simple-websocket = "^0.9.0"
attrs = "^23.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
